address hudi-agent review: use List.of(...) for MDT_INHERITED_SPILLABLE_MAP_CONFIGS to make it genuinely immutable